--- a/hamburgertarifi.html
+++ b/hamburgertarifi.html
@@ -10,36 +10,30 @@
 </head>
 <body>
     <header class="header">
-        <a href="#" class="logo">
-            <img src="pngwing.com.png" alt="logo">
-        </a>
-        <nav class="navbar">
-        <a href="#">home</a>
-        <a href="#">hakkında</a>
-        <a href="#">menü</a>
-        <a href="#">hizmet</a>
-        <a href="#">iletişim</a>
+        <div class="navbar">
+            <nav>
+                <a href="#" class="logo">
+                    <img src="pngwing.com (1).png" alt="logo" >
+                </a>
+                <ul>
+                <button><li><a href="#">home</a></li></button>
+                <button><li><a href="#sipgit">menü</a></li></button>
+                <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ileti%C5%9Fim.html" target="_blank">iletişim</a></li></button>
+                <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/konum.html" target="_blank">konum</a></li></button>
+            </ul>
+            <button type="button">tarifler</button>
+     
         </nav>
-        <div class="buttons">
-            <button>
-                <i class="fas fa-search"></i>
-            </button>
-            <button>
-                <i class="fas fa-shopping-cart"></i>
-            </button>
-            <button>
-                <i class="fas fa-bars"></i>
-            </button>
-        </div>
+    </div>
     </header>
-    <!-- home kısmı-->
+    <!-- home kısmı
     <section class="home">
        <div class="content">
          <h3>eve servis yapılır</h3>
         <p>restaurantımızda eve teslim hizmeti bulunur</p>
         <a href="#sipgit" class="btn">sipariş</a>
     </div>
-    </section>
+    </section>-->
     <!--about-->
     <section class="about">
         <h1 class="heading"> <span>hamburger tarifimiz</span> </h1>
@@ -48,7 +42,7 @@
                 <img src="hamburger.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
-                <h3>hamburger menü</h3>
+                <h5>hamburger menü</h5>
                 <p>Öncelikle hamburgerin ekmeklerini hazırlayalım. hamurumuz cıvık bir hamur olmalı.
                     Ele yapışan türden olmalı.
                     Nasıl yuvarlak yapacağım derseniz, elinizi sıvı yağa batırarak kolayca yuvarlaklar yapacaksınız.
@@ -76,7 +70,7 @@
                     Köfteleri üzerine koyalım.
                     Varsa cheddar peynirini sıcak olan köftenin üzerine koyalım.
                     </p>
-                    <a href="#" class="btn">daha fazla</a>
+                    <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/%C3%B6dev.html" class="btn">ana sayfaya dön</a>
             </div>
         </div>
     </section>
@@ -89,7 +83,7 @@
                 <img src="hamburger1.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
-                <h3>çocuk hamburger menü</h3>
+                <h5>çocuk hamburger menü</h5>
                 <p>
                     Soğan ve sarımsağı rendeleyin. Derin bir kasede soğan, sarımsak, kıyma, tuz ve baharatları yoğurun. Üzerini streç film ile kapatıp buzdolabında 1-2 saat dinlendirin. Hamburger ekmeklerini ikiye ayırın. 
                     Ekmeklerin üzerine marul yapraklarını, dilimlediğiniz domatesi ve salatalık turşusunu yerleştirin. Son olarak birer dilim cheddar peyniri yerleştirin. 
@@ -97,7 +91,6 @@
                     Ayçiçeği yağını tavada ısıtın. Köftelerin her iki tarafını da kızartın. Ocaktan almaya yakın köftelerin üzerine birer dilim cheddar peyniri yerleştirip tavanın kapağını kapatın.
                      Peynirler erimeye başlayınca ocaktan alın. Hazırladığınız hamburger ekmeklerinin üzerine alıp diğer ekmekle kapatın. İsteğe göre ketçap ve mayonez sıkıp servis yapın.
                 </p>
-                    <a href="#" class="btn">daha fazla</a>
             </div>
         </div>
     </section>
@@ -108,13 +101,12 @@
                 <img src="hamburger2.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
-                <h3>yumurtalı hamburger</h3>
+                <h5>yumurtalı hamburger</h5>
                 <p>Soğan ve sarımsağı rendeleyin. Derin bir kasede soğan, sarımsak, kıyma, tuz ve baharatları yoğurun. Üzerini streç film ile kapatıp buzdolabında 1-2 saat dinlendirin. Hamburger ekmeklerini ikiye ayırın.
                      Ekmeklerin üzerine marul yapraklarını, dilimlediğiniz domatesi ve salatalık turşusunu yerleştirin. Son olarak birer dilim cheddar peyniri yerleştirin. Buzdolabında çıkardığınız köfte harcını tekrar yoğurup hamburger ekmeklerinin büyüklüğünde 4 adet köfte yapın. 
                      Ayçiçeği yağını tavada ısıtın. 
                      Köftelerin her iki tarafını da kızartın. Ocaktan almaya yakın köftelerin üzerine birer dilim cheddar peyniri yerleştirip tavanın kapağını kapatın. Peynirler erimeye başlayınca ocaktan alın.
                      Hazırladığınız hamburger ekmeklerinin üzerine alıp diğer ekmekle kapatın. tavada kızarttığınız yumurtayı üzerine ekleyin.İsteğe göre ketçap ve mayonez sıkıp servis yapın.</p>
-                    <a href="#" class="btn">daha fazla</a>
             </div>
         </div>
     </section>
@@ -126,7 +118,7 @@
                 <img src="hamburger3.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
-                <h3>soğanlı hamburger</h3>
+                <h5>soğanlı hamburger</h5>
                 <p>İlk olarak köfte için; kıyma, doğranmış soğan ve karabiberi bir yoğurma kabına alarak iyice yoğurun.
                     Hazırladığınız köfte harcından iri parçalar kopartın ve hamburger köftesi şekli verin. Köfteleri zeytinyağlı bir tavada kızartın.
                     Karamelize soğanı hazırlamak için başka bir tavada zeytinyağını ısıtın. Piyazlık doğradığınız soğanı; tuz, karabiber ve esmer şekerle birlikte kısık ateşte pişirin.
@@ -134,18 +126,11 @@
                     Hamburger sosu için; taze soğan, turşu ve zeytini çok ince dilimleyin. Tüm malzemeyi derin bir kasede karıştırın. Hamburger ekmeklerini yağsız tavada hafif kızarın.
                     Ekmeğin alt tarafına hamburger sosundan bolca sürün. Üzerine marul yaprakları ve hamburger köftenizi yerleştirin. 
                     En üste bir dilim domates ve karamelize soğanları yerleştirin ve diğer ekmeği üzerine kapatın.</p>
-                    <a href="#" class="btn">daha fazla</a>
             </div>
         </div>
     </section>
      <!--footer başlangıç-->
      <section class="footer">
-        <div class="search">
-            <input type="text"
-            class="search-input"
-            placeholder="search">
-            <button class="btn btn-primary">search</button>
-        </div>
         <div class="paylas">
             <a href="#" class="fab fa-facebook"></a>
             <a href="#" class="fab fa-twitter"></a>
