--- a/kızartmalar.html
+++ b/kızartmalar.html
@@ -10,35 +10,29 @@
 </head>
 <body>
     <header class="header">
-        <a href="#" class="logo">
-            <img src="pngwing.com.png" alt="logo">
-        </a>
-        <nav class="navbar">
-        <a href="#">home</a>
-        <a href="#">hakkında</a>
-        <a href="#">menü</a>
-        <a href="#">hizmet</a>
-        <a href="#">iletişim</a>
+        <div class="navbar">
+            <nav>
+                <a href="#" class="logo">
+                    <img src="pngwing.com (1).png" alt="logo" >
+                </a>
+                <ul>
+                <button><li><a href="#">home</a></li></button>
+                <button><li><a href="#sipgit">menü</a></li></button>
+                <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ileti%C5%9Fim.html" target="_blank">iletişim</a></li></button>
+                <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/konum.html" target="_blank">konum</a></li></button>
+            </ul>
+            <button type="button">tarifler</button>
+     
         </nav>
-        <div class="buttons">
-            <button>
-                <i class="fas fa-search"></i>
-            </button>
-            <button>
-                <i class="fas fa-shopping-cart"></i>
-            </button>
-            <button>
-                <i class="fas fa-bars"></i>
-            </button>
-        </div>
+    </div>
     </header>
-    <section class="home">
+    <!--<section class="home">
         <div class="content">
           <h3>eve servis yapılır</h3>
          <p>restaurantımızda eve teslim hizmeti bulunur</p>
          <a href="#sipgit" class="btn">sipariş</a>
      </div>
-     </section>
+     </section>-->
      <!-- menü kısmı-->
      <section class="menü">
          <h1 id="sipgit" class="heading">kızartmalar</h1>
@@ -46,9 +40,8 @@
              <div class="box">
                  <div class="box-head">
                  <img src="patates.jpg" alt="" width="300em">
-                 <span class="menü-kategori">patates</span>
                  <h3>patates kızartması</h3>
-                 <div class="fiyat">104.99tl<span>119.99tl</span></div>
+                 <div class="fiyat">19.99tl<span>29.99tl</span></div>
                  </div>
                  <div class="box-bottom">
                      <a href="#" class="btn">sepete ekle</a>
@@ -57,9 +50,8 @@
              <div class="box">
                  <div class="box-head">
                  <img src="soğan.jpg" alt="" width="300em">
-                 <span class="menü-kategori">soğan halkası</span>
                  <h3>8'li soğan halkası</h3>
-                 <div class="fiyat">109.99tl<span style="text-decoration: line-through;">129.99tl</span></div>
+                 <div class="fiyat">14.99tl<span>19.99tl</span></div>
                  </div>
                  <div class="box-bottom">
                      <a href="#" class="btn">sepete ekle</a>
@@ -68,9 +60,8 @@
              <div class="box">
                  <div class="box-head">
                  <img src="karides.jpg" alt="" width="300em">
-                 <span class="menü-kategori">çıtır karides</span>
                  <h3>4 çıtır karides</h3>
-                 <div class="fiyat">59.99tl<span style="text-decoration: line-through;">79.99tl</span></div>
+                 <div class="fiyat">24.99tl<span>39.99tl</span></div>
                  </div>
                  <div class="box-bottom">
                      <a href="#" class="btn">sepete ekle</a>
@@ -79,9 +70,8 @@
              <div class="box">
                  <div class="box-head">
                  <img src="tavuk.jpg" alt="" width="300em">
-                 <span class="menü-kategori">çıtır tavuk</span>
                  <h3>2 çıtır göğüs</h3>
-                 <div class="fiyat">39.99tl<span style="text-decoration: line-through;">59.99tl</span></div>
+                 <div class="fiyat">49.99tl<span>59.99tl</span></div>
                  </div>
                  <div class="box-bottom">
                      <a href="#" class="btn">sepete ekle</a>
@@ -91,12 +81,6 @@
      </section>
      <!--footer başlangıç-->
     <section class="footer">
-        <div class="search">
-            <input type="text"
-            class="search-input"
-            placeholder="search">
-            <button class="btn btn-primary">search</button>
-        </div>
         <div class="paylas">
             <a href="#" class="fab fa-facebook"></a>
             <a href="#" class="fab fa-twitter"></a>
