--- a/kızartmatarifi.html
+++ b/kızartmatarifi.html
@@ -10,36 +10,30 @@
 </head>
 <body>
     <header class="header">
-        <a href="#" class="logo">
-            <img src="pngwing.com.png" alt="logo">
-        </a>
-        <nav class="navbar">
-        <a href="#">home</a>
-        <a href="#">hakkında</a>
-        <a href="#">menü</a>
-        <a href="#">hizmet</a>
-        <a href="#">iletişim</a>
+        <div class="navbar">
+            <nav>
+                <a href="#" class="logo">
+                    <img src="pngwing.com (1).png" alt="logo" >
+                </a>
+                <ul>
+                <button><li><a href="#">home</a></li></button>
+                <button><li><a href="#sipgit">menü</a></li></button>
+                <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ileti%C5%9Fim.html" target="_blank">iletişim</a></li></button>
+                <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/konum.html" target="_blank">konum</a></li></button>
+            </ul>
+            <button type="button">tarifler</button>
+     
         </nav>
-        <div class="buttons">
-            <button>
-                <i class="fas fa-search"></i>
-            </button>
-            <button>
-                <i class="fas fa-shopping-cart"></i>
-            </button>
-            <button>
-                <i class="fas fa-bars"></i>
-            </button>
-        </div>
+    </div>
     </header>
-    <!-- home kısmı-->
+    <!-- home kısmı
     <section class="home">
        <div class="content">
          <h3>eve servis yapılır</h3>
         <p>restaurantımızda eve teslim hizmeti bulunur</p>
         <a href="#sipgit" class="btn">sipariş</a>
     </div>
-    </section>
+    </section>-->
     <!--about-->
     <section class="about">
         <h1 class="heading"> <span>kızartma tarifimiz</span> </h1>
@@ -48,7 +42,7 @@
                 <img src="patates.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
-                <h3>patates kızartması</h3>
+                <h5>patates kızartması</h5>
                 <p>
                     Patatesleri suyun altında yıkayın kabuklarını soyun istediğiniz şekilde doğrayın.
             1 saat su içinde bekletin arada sırada karıştırın ki nişastaları çıksın.
@@ -59,7 +53,7 @@
             yağ iyice ama iyice kızsın bekleyen soğuyan patatesleri tekrar yağa atın kızarmasına yakın yağa tuz ekleyin.
             İstediğiniz kıvama gelince yağdan alın.
                 </p>
-                    <a href="#" class="btn">daha fazla</a>
+                <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/%C3%B6dev.html" class="btn">ana sayfaya dön</a>
             </div>
         </div>
     </section>
@@ -72,7 +66,7 @@
                 <img src="soğan.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
-                <h3>soğan halkası</h3>
+                <h5>soğan halkası</h5>
                 <p>
                     Soğanı soyup yıkayalım.
                     Resimdeki gibi halka halka doğrayıp birbirinden ayıralım.
@@ -83,7 +77,6 @@
                     ardından galeta ununa tamamını bulayıp kızgın yağda arkalı önlü kızartalım.
                     İşte bu kadar :)) harika bir lezzet, denemenizi öneriyorum. İster sıcak ister soğuk servis yapılabilir her türlü çıtır;) Afiyet olsun 
                 </p>
-                    <a href="#" class="btn">daha fazla</a>
             </div>
         </div>
     </section>
@@ -94,13 +87,12 @@
                 <img src="karides.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
-                <h3>çıtır karides</h3>
+                <h5>çıtır karides</h5>
                 <p>Sos malzemelerini bir kapta güzelce karıştırıp dinlenmeye bırakın.
                     Genişçe bir kapta süt, un, mısır unu, yumurta, 1 yemek kaşığı acı sos, tuz ve karabiberi karıştırın.
                     Başka bir kapta ekmek kırıntısı, soğan, sarımsak, fesleğen, kekik, tuz ve karabiberi karıştırın.
                     Karidesleri teker teker önce süt, un karışımına batırın ardından çıtırlık için ekmek kırıntısı karışımına batırıp tavada 2-3 dk pişirin                                              
                     </p>
-                    <a href="#" class="btn">daha fazla</a>
             </div>
         </div>
     </section>
@@ -112,7 +104,7 @@
                 <img src="tavuk.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
-                <h3>çıtır göğüs</h3>
+                <h5>çıtır göğüs</h5>
                 <p>
                     Tavuk göğüslerini parmak dilimi şeklinde yani julyen doğruyoruz.
                     Derin bir kapta yumurta, karbonat, tuz ve baharatları karıştırıyoruz.
@@ -122,18 +114,11 @@
                     Yine ayrı bir tabağa galeta ununu döküyoruz.
                     Soslu tavuk dilimlerini galeta ununa tek tek bandırıp kızgın yağda kızartıp servis edebiliriz
                 </p>
-                    <a href="#" class="btn">daha fazla</a>
             </div>
         </div>
     </section>
      <!--footer başlangıç-->
      <section class="footer">
-        <div class="search">
-            <input type="text"
-            class="search-input"
-            placeholder="search">
-            <button class="btn btn-primary">search</button>
-        </div>
         <div class="paylas">
             <a href="#" class="fab fa-facebook"></a>
             <a href="#" class="fab fa-twitter"></a>
