--- a/salatatarifi.html
+++ b/salatatarifi.html
@@ -10,36 +10,31 @@
 </head>
 <body>
     <header class="header">
-        <a href="#" class="logo">
-            <img src="pngwing.com.png" alt="logo">
-        </a>
-        <nav class="navbar">
-        <a href="#">home</a>
-        <a href="#">hakkında</a>
-        <a href="#">menü</a>
-        <a href="#">hizmet</a>
-        <a href="#">iletişim</a>
+        <div class="navbar">
+            <nav>
+                <a href="#" class="logo">
+                    <img src="pngwing.com (1).png" alt="logo" >
+                </a>
+                <ul>
+                <button><li><a href="#">home</a></li></button>
+                <button><li><a href="#sipgit">menü</a></li></button>
+                <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ileti%C5%9Fim.html" target="_blank">iletişim</a></li></button>
+                <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/konum.html" target="_blank">konum</a></li></button>
+            </ul>
+            <button type="button">tarifler</button>
+     
         </nav>
-        <div class="buttons">
-            <button>
-                <i class="fas fa-search"></i>
-            </button>
-            <button>
-                <i class="fas fa-shopping-cart"></i>
-            </button>
-            <button>
-                <i class="fas fa-bars"></i>
-            </button>
-        </div>
+    </div>
+    
     </header>
-    <!-- home kısmı-->
+    <!-- home kısmı
     <section class="home">
        <div class="content">
          <h3>eve servis yapılır</h3>
         <p>restaurantımızda eve teslim hizmeti bulunur</p>
         <a href="#sipgit" class="btn">sipariş</a>
     </div>
-    </section>
+    </section>-->
     <!--about-->
     <section class="about">
         <h1 class="heading"> <span>salata tarifimiz</span> </h1>
@@ -48,12 +43,12 @@
                 <img src="soyalısalata.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
-                <h3>soyalı salata</h3>
+                <h5>soyalı salata</h5>
                 <p>Marul ve rokayı iyice yıkayın. Kurutulmuş domatesleri şerit şerit doğrayın. Marul ve rokayı da ince doğrayarak tüm malzemeleri karıştırın. 
                     Sosu için bir kaba soya sosu, roka, susam, zeytinyağı, limon suyu, tuz ve kırmızıbiberi alarak karıştırın. Hazırladığınız sosu salatanın üzerine dökün. 
                     Üzerine kiraz domatesleri dörde bölerek ekleyin. Servis yapın.
                     </p>
-                    <a href="#" class="btn">daha fazla</a>
+                    <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/%C3%B6dev.html" class="btn">ana sayfaya dön</a>
             </div>
         </div>
     </section>
@@ -66,7 +61,7 @@
                 <img src="salata1.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
-                <h3>çoban salata</h3>
+                <h5>çoban salata</h5>
                 <p>
                     İlk olarak domatesleri küçük küçük doğrayın ve karıştırma kabına alın.
                     Daha sonra soğanı da küçük küçük doğrayın ve üzerine tuz serpip elinizle güzelce ovun.
@@ -74,7 +69,6 @@
                     Son olarak maydanozu da ince ince doğrayalım ve doğradığımız diğer malzemelerimizin üzerine ekleyelim.
                     Salatamızın zeytin yağını ve limon suyunu da ekledikten sonra güzelce harmanlayalım ve servis tabağına alarak servis edelim. Afiyet olsun.
                 </p>
-                    <a href="#" class="btn">daha fazla</a>
             </div>
         </div>
     </section>
@@ -85,11 +79,10 @@
                 <img src="salata.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
-                <h3>yumurtalı salata</h3>
+                <h5>yumurtalı salata</h5>
                 <p>Öncelikle yumurtaları 5 dakika kadar haşlıyoruz. Bu arada yeşillikleri sirkeli suda 5 dakika bekletip iyice yıkıyoruz fazla bekletmemeye dikkat edelim vitamini azalmasın.
                    Tüm yeşillikleri ve yumurtayı ince bir şekilde doğrayıp baharatlar, tuz ve yağ ile karıştırıyoruz. Salatamız hazır. İsterseniz kişi sayısına göre malzemeleri çoğaltıp yapabilirsiniz. Afiyet olsun                                      
                     </p>
-                    <a href="#" class="btn">daha fazla</a>
             </div>
         </div>
     </section>
@@ -101,7 +94,7 @@
                 <img src="salata3.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
-                <h3>meyveli salata</h3>
+                <h5>meyveli salata</h5>
                 <p>Not Ekle
                     Tarifi Yazdır
                     Yeşillikler önceden yıkanıp suyu alınır, çok ince olmadan doğranır.
@@ -112,18 +105,11 @@
                     Sosu için limon, zeytinyağı, nar ekşisi, tuz karıştırılır ve servisten hemen önce salatanın üzerine serpilir,
                     karıştırmadan servise sunulur.Afiyet olsun                                    
                     </p>
-                    <a href="#" class="btn">daha fazla</a>
             </div>
         </div>
     </section>
      <!--footer başlangıç-->
      <section class="footer">
-        <div class="search">
-            <input type="text"
-            class="search-input"
-            placeholder="search">
-            <button class="btn btn-primary">search</button>
-        </div>
         <div class="paylas">
             <a href="#" class="fab fa-facebook"></a>
             <a href="#" class="fab fa-twitter"></a>
