--- a/sandviç.html
+++ b/sandviç.html
@@ -10,36 +10,30 @@
 </head>
 <body>
     <header class="header">
-        <a href="#" class="logo">
-            <img src="pngwing.com.png" alt="logo">
-        </a>
-        <nav class="navbar">
-        <a href="#">home</a>
-        <a href="#">hakkında</a>
-        <a href="#">menü</a>
-        <a href="#">hizmet</a>
-        <a href="#">iletişim</a>
+        <div class="navbar">
+            <nav>
+                <a href="#" class="logo">
+                    <img src="pngwing.com (1).png" alt="logo" >
+                </a>
+                <ul>
+                <button><li><a href="#">home</a></li></button>
+                <button><li><a href="#sipgit">menü</a></li></button>
+                <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ileti%C5%9Fim.html" target="_blank">iletişim</a></li></button>
+                <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/konum.html" target="_blank">konum</a></li></button>
+            </ul>
+            <button type="button">tarifler</button>
+     
         </nav>
-        <div class="buttons">
-            <button>
-                <i class="fas fa-search"></i>
-            </button>
-            <button>
-                <i class="fas fa-shopping-cart"></i>
-            </button>
-            <button>
-                <i class="fas fa-bars"></i>
-            </button>
-        </div>
+    </div>
     </header>
-    <!-- home kısmı-->
+    <!-- home kısmı
     <section class="home">
        <div class="content">
          <h3>eve servis yapılır</h3>
         <p>restaurantımızda eve teslim hizmeti bulunur</p>
         <a href="#sipgit" class="btn">sipariş</a>
     </div>
-    </section>
+    </section>-->
     <!-- menü kısmı-->
     <section class="menü">
         <h1 id="sipgit" class="heading">soğuk sandviçler</h1>
@@ -47,9 +41,8 @@
             <div class="box">
                 <div class="box-head">
                 <img src="sandviç.jpg" alt="" width="300em">
-                <span class="menü-kategori">kruvasan sandviç</span>
-                <h3>1 adet sandviç</h3>
-                <div class="fiyat">104.99tl<span>119.99tl</span></div>
+                <h3>kruvasan sandviç</h3>
+                <div class="fiyat">29.99tl<span>39.99tl</span></div>
                 </div>
                 <div class="box-bottom">
                     <a href="#" class="btn">sepete ekle</a>
@@ -58,9 +51,8 @@
             <div class="box">
                 <div class="box-head">
                 <img src="sandviç2.jpg" alt="" width="300em">
-                <span class="menü-kategori">yeşil sandviç</span>
-                <h3>2'li sandviç</h3>
-                <div class="fiyat">109.99tl<span style="text-decoration: line-through;">129.99tl</span></div>
+                <h3>2'li yeşil sandviç</h3>
+                <div class="fiyat">19.99tl<span>29.99tl</span></div>
                 </div>
                 <div class="box-bottom">
                     <a href="#" class="btn">sepete ekle</a>
@@ -69,9 +61,8 @@
             <div class="box">
                 <div class="box-head">
                 <img src="sandviç3.jpg" alt="" width="300em">
-                <span class="menü-kategori">avokadolu sandviç</span>
-                <h3>3 adet sandviç</h3>
-                <div class="fiyat">59.99tl<span style="text-decoration: line-through;">79.99tl</span></div>
+                <h3>avokadolu sandviç</h3>
+                <div class="fiyat">29.99tl<span>39.99tl</span></div>
                 </div>
                 <div class="box-bottom">
                     <a href="#" class="btn">sepete ekle</a>
@@ -80,9 +71,8 @@
             <div class="box">
                 <div class="box-head">
                 <img src="sandviç4.jpg" alt="" width="300em">
-                <span class="menü-kategori">füme sandviç</span>
-                <h3>2 adet sandviç</h3>
-                <div class="fiyat">39.99tl<span style="text-decoration: line-through;">59.99tl</span></div>
+                <h3>2 adet füme sandviç</h3>
+                <div class="fiyat">39.99tl<span>59.99tl</span></div>
                 </div>
                 <div class="box-bottom">
                     <a href="#" class="btn">sepete ekle</a>
@@ -92,12 +82,6 @@
     </section>
     <!--footer başlangıç-->
     <section class="footer">
-        <div class="search">
-            <input type="text"
-            class="search-input"
-            placeholder="search">
-            <button class="btn btn-primary">search</button>
-        </div>
         <div class="paylas">
             <a href="#" class="fab fa-facebook"></a>
             <a href="#" class="fab fa-twitter"></a>
