--- a/soğukiçecek.html
+++ b/soğukiçecek.html
@@ -10,36 +10,30 @@
 </head>
 <body>
     <header class="header">
-        <a href="#" class="logo">
-            <img src="pngwing.com.png" alt="logo">
-        </a>
-        <nav class="navbar">
-        <a href="#">home</a>
-        <a href="#">hakkında</a>
-        <a href="#">menü</a>
-        <a href="#">hizmet</a>
-        <a href="#">iletişim</a>
+        <div class="navbar">
+            <nav>
+                <a href="#" class="logo">
+                    <img src="pngwing.com (1).png" alt="logo" >
+                </a>
+                <ul>
+                <button><li><a href="#">home</a></li></button>
+                <button><li><a href="#sipgit">menü</a></li></button>
+                <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ileti%C5%9Fim.html" target="_blank">iletişim</a></li></button>
+                <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/konum.html" target="_blank">konum</a></li></button>
+            </ul>
+            <button type="button">tarifler</button>
+     
         </nav>
-        <div class="buttons">
-            <button>
-                <i class="fas fa-search"></i>
-            </button>
-            <button>
-                <i class="fas fa-shopping-cart"></i>
-            </button>
-            <button>
-                <i class="fas fa-bars"></i>
-            </button>
-        </div>
+    </div>
     </header>
-    <!-- home kısmı-->
+    <!-- home kısmı
     <section class="home">
        <div class="content">
          <h3>eve servis yapılır</h3>
         <p>restaurantımızda eve teslim hizmeti bulunur</p>
         <a href="#sipgit" class="btn">sipariş</a>
     </div>
-    </section>
+    </section>-->
     <!-- menü kısmı-->
     <section class="menü">
         <h1 id="sipgit" class="heading">soğuk içecekler</h1>
@@ -47,7 +41,6 @@
             <div class="box">
                 <div class="box-head">
                 <img src="kola.jpg" alt="" width="300em">
-                <span class="menü-kategori">siyah kola</span>
                 <h3>şişe kola</h3>
                 <div class="fiyat">14.99tl<span>19.99tl</span></div>
                 </div>
@@ -58,7 +51,6 @@
             <div class="box">
                 <div class="box-head">
                 <img src="içecek.jpg" alt="" width="300em">
-                <span class="menü-kategori">limonata</span>
                 <h3>soğuk limonata</h3>
                 <div class="fiyat">19.99tl<span style="text-decoration: line-through;">29.99tl</span></div>
                 </div>
@@ -69,7 +61,6 @@
             <div class="box">
                 <div class="box-head">
                 <img src="soğukiçecek.jpg" alt="" width="300em">
-                <span class="menü-kategori">meyveli smoothie</span>
                 <h3>çilekli smoothie</h3>
                 <div class="fiyat">24.99tl<span style="text-decoration: line-through;">29.99tl</span></div>
                 </div>
@@ -79,10 +70,9 @@
             </div>
             <div class="box">
                 <div class="box-head">
-                <img src="sandviç4.jpg" alt="" width="300em">
-                <span class="menü-kategori">füme sandviç</span>
-                <h3>2 adet sandviç</h3>
-                <div class="fiyat">39.99tl<span style="text-decoration: line-through;">59.99tl</span></div>
+                <img src="limonlusoda.jpg" alt="" width="300em">
+                <h3>1 bardak limonlu soda</h3>
+                <div class="fiyat">19.99tl<span>29.99tl</span></div>
                 </div>
                 <div class="box-bottom">
                     <a href="#" class="btn">sepete ekle</a>
@@ -92,12 +82,6 @@
     </section>
     <!--footer başlangıç-->
     <section class="footer">
-        <div class="search">
-            <input type="text"
-            class="search-input"
-            placeholder="search">
-            <button class="btn btn-primary">search</button>
-        </div>
         <div class="paylas">
             <a href="#" class="fab fa-facebook"></a>
             <a href="#" class="fab fa-twitter"></a>
