--- a/tatlıtarifi.html
+++ b/tatlıtarifi.html
@@ -10,36 +10,30 @@
 </head>
 <body>
     <header class="header">
-        <a href="#" class="logo">
-            <img src="pngwing.com.png" alt="logo">
-        </a>
-        <nav class="navbar">
-        <a href="#">home</a>
-        <a href="#">hakkında</a>
-        <a href="#">menü</a>
-        <a href="#">hizmet</a>
-        <a href="#">iletişim</a>
+        <div class="navbar">
+            <nav>
+                <a href="#" class="logo">
+                    <img src="pngwing.com (1).png" alt="logo" >
+                </a>
+                <ul>
+                <button><li><a href="#">home</a></li></button>
+                <button><li><a href="#sipgit">menü</a></li></button>
+                <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ileti%C5%9Fim.html" target="_blank">iletişim</a></li></button>
+                <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/konum.html" target="_blank">konum</a></li></button>
+            </ul>
+            <button type="button">tarifler</button>
+     
         </nav>
-        <div class="buttons">
-            <button>
-                <i class="fas fa-search"></i>
-            </button>
-            <button>
-                <i class="fas fa-shopping-cart"></i>
-            </button>
-            <button>
-                <i class="fas fa-bars"></i>
-            </button>
-        </div>
+    </div>
     </header>
-    <!-- home kısmı-->
+    <!-- home kısmı
     <section class="home">
        <div class="content">
          <h3>eve servis yapılır</h3>
         <p>restaurantımızda eve teslim hizmeti bulunur</p>
         <a href="#sipgit" class="btn">sipariş</a>
-    </div>
-    </section>
+    </div>-->
+   
     <!--about-->
     <section class="about">
         <h1 class="heading"> <span>tatlı tarifimiz</span> </h1>
@@ -48,14 +42,14 @@
                 <img src="tatlı.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
-                <h3>çilekli soğuk tatlı</h3>
+                <h5>çilekli soğuk tatlı</h5>
                 <p>
                     Çilekleri bol suda yıkayıp yeşilliklerini keselim.
 Dondurma, çilekler, toz şeker ve sütü blender’a alalım. Dilerseniz pudra şekeri de kullanabilirsiniz, daha kolay eriyecektir.
 Tüm malzemeler tamamen karışıp, homojen bir kıvam alana kadar blender’ı çalıştıralım.
 Hazır olan çilekli milkshake’i bardaklara paylaştıralım.
                 </p>
-                    <a href="#" class="btn">daha fazla</a>
+                    <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/%C3%B6dev.html" class="btn">ana sayfaya dön</a>
             </div>
         </div>
     </section>
@@ -68,7 +62,7 @@ Hazır olan çilekli milkshake’i bardaklara paylaştıralım.
                 <img src="tatlı2.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
-                <h3>çikolatalı pasta</h3>
+                <h5>çikolatalı pasta</h5>
                 <p>
                     Pandispanya için; yumurtayı şekeri ve balı aynı kaba alalım. Altına içi sıcak su dolu başka bir kap koyalım.
 Sıcak suyun üzerinde el çırpıcısı ile çırpalım. Hiç bırakmadan çırpalım, bir süre sonra ısınmaya başlayacak.
@@ -94,7 +88,6 @@ Yavaş yavaş sıvı krema ekleyip sürülebilir kıvam alana kadar çırpalım.
 Dış ganaj için; çikolatayı benmari usulü eritelim. Ardından sıvı yağı ekleyip oda ısısına gelmesini bekleyelim ara ara karıştıralım.
 Ardından hazır olan pastamızın en son katına dökelim.
                 </p>
-                    <a href="#" class="btn">daha fazla</a>
             </div>
         </div>
     </section>
@@ -105,7 +98,7 @@ Ardından hazır olan pastamızın en son katına dökelim.
                 <img src="tatlı3.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
-                <h3>browni</h3>
+                <h5>browni</h5>
                 <p>
                     Çikolatalı Brownie için öncelikle tereyağı ve çikolatayı uygun bir kaba alıp benmari usulü eritelim.
 Derin bir kaba erittiğimiz çikolata ve tereyağını aktaralım.
@@ -116,7 +109,6 @@ Her eklemede kuru malzemelerimizi spatula ile alttan üste doğru karıştırara
 Yağlı kağıt serilmiş küçük kare borcama kek karışımını boşaltalım.
 170 derece ısıtılmış fırında kontrollü olarak pişirelim. Ben 30 dk pişirdim. Pişirme süresi fırından fırına farklılık gösterebilir.
                 </p>
-                    <a href="#" class="btn">daha fazla</a>
             </div>
         </div>
     </section>
@@ -128,7 +120,7 @@ Yağlı kağıt serilmiş küçük kare borcama kek karışımını boşaltalım
                 <img src="tatlı4.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
-                <h3>krem karamel</h3>
+                <h5>krem karamel</h5>
                 <p>Önce kaselere paylaştırılacak olan karameli yapalım: 1 bardak şeker tencerede orta ateşte karıştırarak yakılır.
                     Şeker sıvı hale gelmeye başlayınca altı kısılır.
                     Rengi çok kararmadan altı kapatılır.
@@ -140,18 +132,11 @@ Yağlı kağıt serilmiş küçük kare borcama kek karışımını boşaltalım
                     Dibi tutmaması için devamlı karıştırarak muhallebi pişirilir; kaselerdeki donan şekerin üzerlerine paylaştırılır. 
                     Ben fotoğraflarda göreceğiniz gibi çok doldurmadım, porsiyonlar küçük oldu. Sizin tam doldurmanızı öneririm.
                     Bu şekilde tatlılar en az 6- 8 saat beklemelidir. Bu süre içinde yanmış şeker eriyecek sıvı hale gelecek ve kolayca ters dönecektir.</p>
-                    <a href="#" class="btn">daha fazla</a>
             </div>
         </div>
     </section>
      <!--footer başlangıç-->
      <section class="footer">
-        <div class="search">
-            <input type="text"
-            class="search-input"
-            placeholder="search">
-            <button class="btn btn-primary">search</button>
-        </div>
         <div class="paylas">
             <a href="#" class="fab fa-facebook"></a>
             <a href="#" class="fab fa-twitter"></a>
