--- a/çorba.html
+++ b/çorba.html
@@ -10,44 +10,37 @@
 </head>
 <body>
     <header class="header">
-        <a href="#" class="logo">
-            <img src="pngwing.com.png" alt="logo">
-        </a>
-        <nav class="navbar">
-        <a href="#">home</a>
-        <a href="#">hakkında</a>
-        <a href="#">menü</a>
-        <a href="#">hizmet</a>
-        <a href="#">iletişim</a>
+        <div class="navbar">
+            <nav>
+                <a href="#" class="logo">
+                    <img src="pngwing.com (1).png" alt="logo" >
+                </a>
+                <ul>
+                <button><li><a href="#">home</a></li></button>
+                <button><li><a href="#sipgit">menü</a></li></button>
+                <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ileti%C5%9Fim.html" target="_blank">iletişim</a></li></button>
+                <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/konum.html" target="_blank">konum</a></li></button>
+            </ul>
+            <button type="button">tarifler</button>
+     
         </nav>
-        <div class="buttons">
-            <button>
-                <i class="fas fa-search"></i>
-            </button>
-            <button>
-                <i class="fas fa-shopping-cart"></i>
-            </button>
-            <button>
-                <i class="fas fa-bars"></i>
-            </button>
-        </div>
+    </div>
     </header>
-    <section class="home">
+    <!--<section class="home">
         <div class="content">
           <h3>eve servis yapılır</h3>
          <p>restaurantımızda eve teslim hizmeti bulunur</p>
          <a href="#sipgit" class="btn">sipariş</a>
      </div>
-     </section>
+     </section>-->
     <section class="menü">
         <h1 id="sipgit" class="heading">çorbalar</h1>
         <div class="box-conteiner">
             <div class="box">
                 <div class="box-head">
                 <img src="ezogelinçorba.jpg" alt="" width="300em">
-                <span class="menü-kategori">mantar çorbası</span>
-                <h3>1 kase sıcak çorba</h3>
-                <div class="fiyat">104.99tl<span>119.99tl</span></div>
+                <h3>mantar çorba</h3>
+                <div class="fiyat">34.99tl<span>39.99tl</span></div>
                 </div>
                 <div class="box-bottom">
                     <a href="#" class="btn">sepete ekle</a>
@@ -56,9 +49,8 @@
             <div class="box">
                 <div class="box-head">
                 <img src="mantarçorbası.jpg" alt="" width="300em">
-                <span class="menü-kategori">ezogelin çorbası</span>
-                <h3>1 kase sıcak çorba</h3>
-                <div class="fiyat">109.99tl<span style="text-decoration: line-through;">129.99tl</span></div>
+                <h3>ezogelin çorba</h3>
+                <div class="fiyat">29.99tl<span>39.99tl</span></div>
                 </div>
                 <div class="box-bottom">
                     <a href="#" class="btn">sepete ekle</a>
@@ -67,9 +59,8 @@
             <div class="box">
                 <div class="box-head">
                 <img src="kabakçorbası.jpg" alt="" width="300em">
-                <span class="menü-kategori">kabak çorbası</span>
-                <h3>1 kase sıcak çorba</h3>
-                <div class="fiyat">59.99tl<span style="text-decoration: line-through;">79.99tl</span></div>
+                <h3>kabak çorbası</h3>
+                <div class="fiyat">29.99tl<span>39.99tl</span></div>
                 </div>
                 <div class="box-bottom">
                     <a href="#" class="btn">sepete ekle</a>
@@ -78,9 +69,8 @@
             <div class="box">
                 <div class="box-head">
                 <img src="balkabağı.jpg" alt="" width="300em">
-                <span class="menü-kategori">balkabağı çorbası</span>
-                <h3>1 kase sıcak çorba</h3>
-                <div class="fiyat">39.99tl<span style="text-decoration: line-through;">59.99tl</span></div>
+                <h3>balkabağı çorbası</h3>
+                <div class="fiyat">39.99tl<span>49.99tl</span></div>
                 </div>
                 <div class="box-bottom">
                     <a href="#" class="btn">sepete ekle</a>
@@ -90,12 +80,6 @@
     </section> 
     <!--footer başlangıç-->
     <section class="footer">
-        <div class="search">
-            <input type="text"
-            class="search-input"
-            placeholder="search">
-            <button class="btn btn-primary">search</button>
-        </div>
         <div class="paylas">
             <a href="#" class="fab fa-facebook"></a>
             <a href="#" class="fab fa-twitter"></a>
