--- a/çorbatarifi.html
+++ b/çorbatarifi.html
@@ -10,36 +10,29 @@
 </head>
 <body>
     <header class="header">
-        <a href="#" class="logo">
-            <img src="pngwing.com.png" alt="logo">
-        </a>
-        <nav class="navbar">
-        <a href="#">home</a>
-        <a href="#">hakkında</a>
-        <a href="#">menü</a>
-        <a href="#">hizmet</a>
-        <a href="#">iletişim</a>
+        <div class="navbar">
+            <nav>
+                <a href="#" class="logo">
+                    <img src="pngwing.com (1).png" alt="logo" >
+                </a>
+                <ul>
+                <button><li><a href="#">home</a></li></button>
+                <button><li><a href="#sipgit">menü</a></li></button>
+                <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ileti%C5%9Fim.html" target="_blank">iletişim</a></li></button>
+                <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/konum.html" target="_blank">konum</a></li></button>
+            </ul>
+            <button type="button">tarifler</button>
+     
         </nav>
-        <div class="buttons">
-            <button>
-                <i class="fas fa-search"></i>
-            </button>
-            <button>
-                <i class="fas fa-shopping-cart"></i>
-            </button>
-            <button>
-                <i class="fas fa-bars"></i>
-            </button>
-        </div>
     </header>
-    <!-- home kısmı-->
+    <!-- home kısmı
     <section class="home">
        <div class="content">
          <h3>eve servis yapılır</h3>
         <p>restaurantımızda eve teslim hizmeti bulunur</p>
         <a href="#sipgit" class="btn">sipariş</a>
     </div>
-    </section>
+    </section>-->
     <!--about-->
     <section class="about">
         <h1 class="heading"> <span>kabak çorbası tarifimiz</span> </h1>
@@ -48,7 +41,7 @@
                 <img src="kabakçorbası.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
-                <h3>kabak çorbası</h3>
+                <h5>kabak çorbası</h5>
                 <p>Tereyağı ve sıvı yağı tencereye koyup eritin.
                     Unu ilave edip kokusu çıkana kadar birkaç dakika kavurun.
                     Bir taraftan çırpma teliyle hızlıca çırpıp diğer taraftan sütü ilave edin.
@@ -58,7 +51,7 @@
                     Çorbanızın kıvamı kullandığınız kabakların büyüklüğüne göre değişebilir.
                     Kıvamı koyu olursa, suyla ayarlayıp pişirin. Birde çorbanızı pişirirken, dibinin tutmaması için ara ara karıştırmayı unutmayın.
                     </p>
-                    <a href="#" class="btn">daha fazla</a>
+                    <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/%C3%B6dev.html" class="btn">ana sayfaya dön</a>
             </div>
         </div>
     </section>
@@ -71,7 +64,7 @@
                 <img src="ezogelinçorba.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
-                <h3>mantar çorbası</h3>
+                <h5>mantar çorbası</h5>
                 <p>
                     İlk olarak mantarları bol suda durulayın ve süzün. Ardından mantarları iri formda doğrayarak tereyağında 3-4 dakika soteleyin.
                     İnce ince ezilmiş sarımsak ve unu, mantar soteye ilave edip unun rengi dönünceye kadar kavurun.
@@ -79,7 +72,6 @@
                     Son olarak koyulaşan çorbanın içerisine kremayı ilave edip kısık ateşte 7-8 dakika daha pişirin.
                     Pişirme işleminden sonra çorbayı ocaktan alın.
                     </p>
-                    <a href="#" class="btn">daha fazla</a>
             </div>
         </div>
     </section>
@@ -90,7 +82,7 @@
                 <img src="mantarçorbası.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
-                <h3>ezogelin çorba</h3>
+                <h5>ezogelin çorba</h5>
                 <p>Ezogelin çorbası için mercimekleri bol suyla yıkayın.
                     Soğanı ve sarımsakları incecik doğrayın.
                     Pirinç ve bulguru az suyla hafifçe haşlayın ve süzün.
@@ -103,7 +95,6 @@
                     Limon suyunu, baharatları ve tuzu da ekleyip çorba kıvam alana kadar çırpma teli ile karıştırın.
                     Daha pürüzsüz bir kıvam isterseniz çorbanızı blender’dan da geçirebilirsiniz.                    
                     </p>
-                    <a href="#" class="btn">daha fazla</a>
             </div>
         </div>
     </section>
@@ -115,7 +106,7 @@
                 <img src="balkabağı.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
-                <h3>balkabağı çorbası</h3>
+                <h5>balkabağı çorbası</h5>
                 <p>Öncelikle kabakları temizleyip küp şeklinde doğruyoruz ve yıkıyoruz.
                     Tencereye su ile birlikte koyup rendelenmiş patatesi ilave ediyoruz ve kaynatıyoruz.
                     Rendelenmiş havuç, küp küp doğradığımız soğan ve sarımsağı tavada sıvı yağı ile kavuruyoruz ve tencereye ilave ediyoruz.
@@ -123,18 +114,11 @@
                     Blendırdan geçirin ve süt, pul biber, yarım çay kaşığı zerdeçal ilave edin.
                     Kısık ateşte beş dakika daha kaynatın ve karabiber ilave edip altını kapatın.                    
                     </p>
-                    <a href="#" class="btn">daha fazla</a>
             </div>
         </div>
     </section>
      <!--footer başlangıç-->
      <section class="footer">
-        <div class="search">
-            <input type="text"
-            class="search-input"
-            placeholder="search">
-            <button class="btn btn-primary">search</button>
-        </div>
         <div class="paylas">
             <a href="#" class="fab fa-facebook"></a>
             <a href="#" class="fab fa-twitter"></a>
