--- a/hamburger.html
+++ b/hamburger.html
@@ -11,36 +11,30 @@
 </head>
 <body>
     <header class="header">
-        <a href="#" class="logo">
-            <img src="pngwing.com.png" alt="logo">
-        </a>
-        <nav class="navbar">
-        <a href="#">home</a>
-        <a href="#">hakkında</a>
-        <a href="#">menü</a>
-        <a href="#">hizmet</a>
-        <a href="#">iletişim</a>
+        <div class="navbar">
+            <nav>
+                <a href="#" class="logo">
+                    <img src="pngwing.com (1).png" alt="logo" >
+                </a>
+                <ul>
+                <button><li><a href="#">home</a></li></button>
+                <button><li><a href="#sipgit">menü</a></li></button>
+                <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ileti%C5%9Fim.html" target="_blank">iletişim</a></li></button>
+                <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/konum.html" target="_blank">konum</a></li></button>
+            </ul>
+            <button type="button">tarifler</button>
+     
         </nav>
-        <div class="buttons">
-            <button>
-                <i class="fas fa-search"></i>
-            </button>
-            <button>
-                <i class="fas fa-shopping-cart"></i>
-            </button>
-            <button>
-                <i class="fas fa-bars"></i>
-            </button>
-        </div>
+    </div>
     </header>
-    <!-- home kısmı-->
+    <!-- home kısmı
     <section class="home">
        <div class="content">
          <h3>eve servis yapılır</h3>
         <p>restaurantımızda eve teslim hizmeti bulunur</p>
         <a href="#sipgit" class="btn">sipariş</a>
     </div>
-    </section>
+    </section>-->
     <!--menü-->
     <section class="menü">
         <h1 id="sipgit" class="heading">hamburgerler</h1>
@@ -48,9 +42,8 @@
             <div class="box">
                 <div class="box-head">
                 <img src="hamburger.jpg" alt="" width="300em">
-                <span class="menü-kategori">hamburger menü</span>
                 <h3>sos ve patates eşliginde</h3>
-                <div class="fiyat">39.99tl<span>59.99tl</span></div>
+                <div class="fiyat">49.99tl<span>69.99tl</span></div>
                 </div>
                 <div class="box-bottom">
                     <a href="#" class="btn">sepete ekle</a>
@@ -59,9 +52,8 @@
             <div class="box">
                 <div class="box-head">
                 <img src="hamburger1.jpg" alt="" width="300em">
-                <span class="menü-kategori">hamburger menü</span>
                 <h3>çocuk hamburger menü</h3>
-                <div class="fiyat">109.99tl<span style="text-decoration: line-through;">129.99tl</span></div>
+                <div class="fiyat">39.99tl<span>59.99tl</span></div>
                 </div>
                 <div class="box-bottom">
                     <a href="#" class="btn">sepete ekle</a>
@@ -70,9 +62,8 @@
             <div class="box">
                 <div class="box-head">
                 <img src="hamburger2.jpg" alt="" width="300em">
-                <span class="menü-kategori">yumurtalı hamburger</span>
                 <h3>yumurtalı hamburger</h3>
-                <div class="fiyat">59.99tl<span style="text-decoration: line-through;">79.99tl</span></div>
+                <div class="fiyat">59.99tl<span>79.99tl</span></div>
                 </div>
                 <div class="box-bottom">
                     <a href="#" class="btn">sepete ekle</a>
@@ -81,9 +72,8 @@
             <div class="box">
                 <div class="box-head">
                 <img src="hamburger3.jpg" alt="" width="300em">
-                <span class="menü-kategori">hamburger menü</span>
                 <h3>turşulu soğanlı et burger</h3>
-                <div class="fiyat">79.99tl<span style="text-decoration: line-through;">89.99tl</span></div>
+                <div class="fiyat">79.99tl<span>89.99tl</span></div>
                 </div>
                 <div class="box-bottom">
                     <a href="#" class="btn">sepete ekle</a>
@@ -94,12 +84,6 @@
 
       <!--footer başlangıç-->
       <section class="footer">
-        <div class="search">
-            <input type="text"
-            class="search-input"
-            placeholder="search">
-            <button class="btn btn-primary">search</button>
-        </div>
         <div class="paylas">
             <a href="#" class="fab fa-facebook"></a>
             <a href="#" class="fab fa-twitter"></a>
