--- a/iletişim.html
+++ b/iletişim.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="iletişim.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+     <script src="script.js"></script>
 </head>
 <body>
     <div class="container">
@@ -47,7 +47,7 @@
                         <textarea rows="5" placeholder="mesajınız"></textarea>
                     </div>
                     <div class="button">
-                        <input type="button" value="mesaj gönder">
+                        <input type="button" value="mesaj gönder" onclick="mesaj()">
                     </div>
                     
                 </form>
