--- a/makarnatarifi.html
+++ b/makarnatarifi.html
@@ -10,36 +10,31 @@
 </head>
 <body>
     <header class="header">
-        <a href="#" class="logo">
-            <img src="pngwing.com.png" alt="logo">
-        </a>
-        <nav class="navbar">
-        <a href="#">home</a>
-        <a href="#">hakkında</a>
-        <a href="#">menü</a>
-        <a href="#">hizmet</a>
-        <a href="#">iletişim</a>
+        <div class="navbar">
+            <nav>
+                <a href="#" class="logo">
+                    <img src="pngwing.com (1).png" alt="logo" >
+                </a>
+                <ul>
+                <button><li><a href="#">home</a></li></button>
+                <button><li><a href="#sipgit">menü</a></li></button>
+                <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ileti%C5%9Fim.html" target="_blank">iletişim</a></li></button>
+                <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/konum.html" target="_blank">konum</a></li></button>
+            </ul>
+            <button type="button">tarifler</button>
+     
         </nav>
-        <div class="buttons">
-            <button>
-                <i class="fas fa-search"></i>
-            </button>
-            <button>
-                <i class="fas fa-shopping-cart"></i>
-            </button>
-            <button>
-                <i class="fas fa-bars"></i>
-            </button>
-        </div>
+    </div>
+    
     </header>
-    <!-- home kısmı-->
+    <!-- home kısmı
     <section class="home">
        <div class="content">
          <h3>eve servis yapılır</h3>
         <p>restaurantımızda eve teslim hizmeti bulunur</p>
         <a href="#sipgit" class="btn">sipariş</a>
     </div>
-    </section>
+    </section>-->
     <!--about-->
     <section class="about">
         <h1 class="heading"> <span>makarna tarifimiz</span> </h1>
@@ -48,7 +43,7 @@
                 <img src="makarna1.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
-                <h3>salçalı makarna</h3>
+                <h5>salçalı makarna</h5>
                 <p>Öncelikle bir tencerede makarna için su kaynatın.
                     Kaynayan suya makarnaları atın ve haşlayın.
                     Makarnalar haşlanırken domates sosu için genişçe bir tavaya sıvı yağ koyun.
@@ -60,7 +55,7 @@
                     Kaynayan makarnanın haşlama suyundan da biraz sosa ilave edin.
                     Sos hazır olduktan ve makarnalar da pişip suyu süzüldükten sonra birbirine karıştırın
                     </p>
-                    <a href="#" class="btn">daha fazla</a>
+                    <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/%C3%B6dev.html" class="btn">ana sayfaya dön</a>
             </div>
         </div>
     </section>
@@ -73,7 +68,7 @@
                 <img src="makarna.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
-                <h3>kremalı makarna</h3>
+                <h5>kremalı makarna</h5>
                 <p>Öncelikle makarnamızı bol tuzlu suda haşlayalım.
                     Biberler jülyen doğrayalım, yağı tavaya alalım ve biberleri soteleyelim.
                     Sarımsaklar da eklenerek kavuralım.
@@ -83,7 +78,6 @@
                     Haşlanıp süzülen makarnamızı da üzerine ekleyerek iyice karıştıralım.
                      Dilerseniz rendelenmiş kaşar, parmesan veya mozarella ekleyerek servis edebilirsiniz.                    
                     </p>
-                    <a href="#" class="btn">daha fazla</a>
             </div>
         </div>
     </section>
@@ -94,7 +88,7 @@
                 <img src="makarna2.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
-                <h3>mantar soslu makarna</h3>
+                <h5>mantar soslu makarna</h5>
                 <p>Öncelikle tencereye 1 litre sıcak su alınır tuz ve bir çorba kaşığı sıvı yağ eklenir, kaynatılır kaynayan suya makarna eklenir ve iyice pişirilir, pişen makarna süzülür ve bekletilir.
                     Diğer yanda derin bir tavaya tereyağ ve biraz sıvı yağ eklenir.
                     Ardından ince ince doğranılan tavuk göğsü eklenip biraz kavrulur ve sonrasında küp küp doğranılan soğan eklendikten sonra iyice kavrulur ve ardından diğer malzemeler birer birer eklenir.
@@ -102,7 +96,6 @@
                     Pişen sos hafif koyulaşır ocağın altı kapatılır ve makarna eklenir.
                     İyice karıştırıp kapağı kapatılır 20 dk dinlenmeli dinlenirse tadı daha bir lezzetli olur.                                        
                     </p>
-                    <a href="#" class="btn">daha fazla</a>
             </div>
         </div>
     </section>
@@ -114,7 +107,7 @@
                 <img src="makarna3.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
-                <h3>pesto soslu makarna</h3>
+                <h5>pesto soslu makarna</h5>
                 <p>penne makarna
                     Genişçe bir tencereye bolca su alıp kaynatalım.
                     Kaynayınca yarım tatlı kaşığı kadar tuz ekleyip makarnaları ilave edelim.
@@ -124,18 +117,11 @@
                     Çok fokur fokur kaynamasına gerek kalmadan hafifçe pişirelim ve bu sırada suyunu süzdüğümüz makarnaları da ilave edelim.
                     Karıştırarak bütün makarnaların sosa bulanmasını sağlayalım.                                    
                     </p>
-                    <a href="#" class="btn">daha fazla</a>
             </div>
         </div>
     </section>
      <!--footer başlangıç-->
      <section class="footer">
-        <div class="search">
-            <input type="text"
-            class="search-input"
-            placeholder="search">
-            <button class="btn btn-primary">search</button>
-        </div>
         <div class="paylas">
             <a href="#" class="fab fa-facebook"></a>
             <a href="#" class="fab fa-twitter"></a>
