--- a/sandviçtarifi.html
+++ b/sandviçtarifi.html
@@ -10,36 +10,31 @@
 </head>
 <body>
     <header class="header">
-        <a href="#" class="logo">
-            <img src="pngwing.com.png" alt="logo">
-        </a>
-        <nav class="navbar">
-        <a href="#">home</a>
-        <a href="#">hakkında</a>
-        <a href="#">menü</a>
-        <a href="#">hizmet</a>
-        <a href="#">iletişim</a>
+        <div class="navbar">
+            <nav>
+                <a href="#" class="logo">
+                    <img src="pngwing.com (1).png" alt="logo" >
+                </a>
+                <ul>
+                <button><li><a href="#">home</a></li></button>
+                <button><li><a href="#sipgit">menü</a></li></button>
+                <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ileti%C5%9Fim.html" target="_blank">iletişim</a></li></button>
+                <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/konum.html" target="_blank">konum</a></li></button>
+            </ul>
+            <button type="button">tarifler</button>
+     
         </nav>
-        <div class="buttons">
-            <button>
-                <i class="fas fa-search"></i>
-            </button>
-            <button>
-                <i class="fas fa-shopping-cart"></i>
-            </button>
-            <button>
-                <i class="fas fa-bars"></i>
-            </button>
-        </div>
+    </div>
+    
     </header>
-    <!-- home kısmı-->
+    <!-- home kısmı
     <section class="home">
        <div class="content">
          <h3>eve servis yapılır</h3>
         <p>restaurantımızda eve teslim hizmeti bulunur</p>
         <a href="#sipgit" class="btn">sipariş</a>
     </div>
-    </section>
+    </section>-->
     <!--about-->
     <section class="about">
         <h1 class="heading"> <span>sandviç tarifimiz</span> </h1>
@@ -48,14 +43,14 @@
                 <img src="sandviç.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
-                <h3>kruvasan sandviç</h3>
+                <h5>kruvasan sandviç</h5>
                 <p>Kruvasanı iyi bir bıçakla ortadan ikiye bölün.
                     Tüm malzemeleri incecik dilimleyin.
                     Kruvasanın bir tarafına krem peynir bir tarafına mayonez sürün.
                     Malzemeleri sırasıyla fotoğraftaki gibi yerleştirin.
                     Sandviçi ortadan ikiye keserek servis edin.
                     </p>
-                    <a href="#" class="btn">daha fazla</a>
+                    <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/%C3%B6dev.html" class="btn">ana sayfaya dön</a>
             </div>
         </div>
     </section>
@@ -68,12 +63,11 @@
                 <img src="sandviç2.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
-                <h3>avokadolu sandviç</h3>
+                <h5>avokadolu sandviç</h5>
                 <p>
                     İlk başta avakadoyu hazırlayalım. Yarım avakadonun içine zeytinyağı, sarımsak, limon ve birazda tuz koyup karıştıralım. 
                     Ekmeğimize sürelim. Üstüne hindi salamı, kaşar peyniri ve diğer ekmek dilimini koyalım. Ekmek dilimlerini önceden tavada tereyağ ile arkalı önlü kızartabiliriz.
                 </p>
-                    <a href="#" class="btn">daha fazla</a>
             </div>
         </div>
     </section>
@@ -84,13 +78,12 @@
                 <img src="sandviç3.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
-                <h3>yeşil sandviç</h3>
+                <h5>yeşil sandviç</h5>
                 <p>
                     Avokado, fesleğen ve limon suyunu biraz tuz ve karabiberle küçük bir mutfak robotuna koyun.İstediğiniz kıvama gelene kadar karıştırın.
                     Avokado karışımını iki dilim ekmeğin üzerine yayın. Karışımın üzerine taze ıspanağı, dilimlenmiş salatalığı ve taze mozarella peynirini yerleştirin.
                     Diğer dilim ekmekleri de malzemelerin üzerine yerleştirerek sandviçinizi tamamlayın. Ve sandviçiniz servise hazır!
                 </p>
-                    <a href="#" class="btn">daha fazla</a>
             </div>
         </div>
     </section>
@@ -102,7 +95,7 @@
                 <img src="sandviç4.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
-                <h3>füme sandviç</h3>
+                <h5>füme sandviç</h5>
                 <p>İlk olarak tüm sebzeleri yıkayıp kurutun.
                     Ardından domates ve soğanları yuvarlak şekilde doğrayın.
                     Hellim peynirini 10 dakika suda bekletin. Ardından dilimleyerek kurumasını bekleyin.
@@ -114,18 +107,11 @@
                     Sonra tekrar marul yerleştirerek ekmeğinizi kapatın.
                     Dilerseniz, tost makinesine bastırabilirsiniz. Afiyet olsun.                             
                     </p>
-                    <a href="#" class="btn">daha fazla</a>
             </div>
         </div>
     </section>
      <!--footer başlangıç-->
      <section class="footer">
-        <div class="search">
-            <input type="text"
-            class="search-input"
-            placeholder="search">
-            <button class="btn btn-primary">search</button>
-        </div>
         <div class="paylas">
             <a href="#" class="fab fa-facebook"></a>
             <a href="#" class="fab fa-twitter"></a>
