--- a/çaylar.html
+++ b/çaylar.html
@@ -36,13 +36,13 @@
     </section>-->
     <!-- menü kısmı-->
     <section class="menü">
-        <h1 id="sipgit" class="heading">sıcak içecekler</h1>
+        <h1 id="sipgit" class="heading">çaylar</h1>
         <div class="box-conteiner">
             <div class="box">
                 <div class="box-head">
-                <img src="kahve1.jpg" alt="" width="300em">
-                <h3>latte</h3>
-                <div class="fiyat">19.99tl<span>29.99tl</span></div>
+                <img src="çay1.jpg" alt="" width="300em">
+                <h3>kızılcık çayı</h3>
+                <div class="fiyat">14.99tl<span>19.99tl</span></div>
                 </div>
                 <div class="box-bottom">
                     <a href="#" class="btn">sepete ekle</a>
@@ -50,9 +50,9 @@
             </div>
             <div class="box">
                 <div class="box-head">
-                <img src="kahve2.jpg" alt="" width="300em">
-                <h3>türk kahvesi</h3>
-                <div class="fiyat">19.99tl<span>29.99tl</span></div>
+                <img src="çay.jpg" alt="" width="300em">
+                <h3>kurutulmuş bitki çayı</h3>
+                <div class="fiyat">14.99tl<span>19.99tl</span></div>
                 </div>
                 <div class="box-bottom">
                     <a href="#" class="btn">sepete ekle</a>
@@ -60,9 +60,9 @@
             </div>
             <div class="box">
                 <div class="box-head">
-                <img src="kahve3.jpg" alt="" width="300em">
-                <h3>white mocha</h3>
-                <div class="fiyat">39.99tl<span>59.99tl</span></div>
+                <img src="çay3.jpg" alt="" width="300em">
+                <h3>papatya çayı</h3>
+                <div class="fiyat">14.99tl<span>19.99tl</span></div>
                 </div>
                 <div class="box-bottom">
                     <a href="#" class="btn">sepete ekle</a>
@@ -70,9 +70,9 @@
             </div>
             <div class="box">
                 <div class="box-head">
-                <img src="kahve4.jpg" alt="" width="300em">
-                <h3>sütlü türk kahvesi</h3>
-                <div class="fiyat">24.99tl<span>29.99tl</span></div>
+                <img src="çay4.jpg" alt="" width="300em">
+                <h3>lavanta çayı</h3>
+                <div class="fiyat">14.99tl<span>19.99tl</span></div>
                 </div>
                 <div class="box-bottom">
                     <a href="#" class="btn">sepete ekle</a>
