--- a/anayemektarifleri.html
+++ b/anayemektarifleri.html
@@ -10,36 +10,29 @@
 </head>
 <body>
     <header class="header">
-        <a href="#" class="logo">
-            <img src="pngwing.com.png" alt="logo">
-        </a>
-        <nav class="navbar">
-        <a href="#">home</a>
-        <a href="#">hakkında</a>
-        <a href="#">menü</a>
-        <a href="#">hizmet</a>
-        <a href="#">iletişim</a>
+        <div class="navbar">
+            <nav>
+                <a href="#" class="logo">
+                    <img src="pngwing.com (1).png" alt="logo" >
+                </a>
+                <ul>
+                <button><li><a href="#">home</a></li></button>
+                <button><li><a href="#sipgit">menü</a></li></button>
+                <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ileti%C5%9Fim.html" target="_blank">iletişim</a></li></button>
+                <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/konum.html" target="_blank">konum</a></li></button>
+            </ul>
+            <button type="button">tarifler</button>
+     
         </nav>
-        <div class="buttons">
-            <button>
-                <i class="fas fa-search"></i>
-            </button>
-            <button>
-                <i class="fas fa-shopping-cart"></i>
-            </button>
-            <button>
-                <i class="fas fa-bars"></i>
-            </button>
-        </div>
     </header>
-    <!-- home kısmı-->
+    <!-- home kısmı
     <section class="home">
        <div class="content">
          <h3>eve servis yapılır</h3>
         <p>restaurantımızda eve teslim hizmeti bulunur</p>
         <a href="#sipgit" class="btn">sipariş</a>
     </div>
-    </section>
+    </section>-->
     <!--about-->
     <section class="about">
         <h1 class="heading"> <span>ana yemek tarifimiz</span> </h1>
@@ -48,7 +41,7 @@
                 <img src="et1.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
-                <h3>dana bonfile</h3>
+                <h5>dana bonfile</h5>
                 <p>
                     Etler madalyon şeklinde dilimlenir. İki saat önceden tuz karabiber zeytinyağı ve taze biberiye ile marine edilir.
 Marine işleminde zeytinyağı kullanılması oldukça önemlidir. Çünkü zeytinyağı etin hava almasını önleyerek eti yumuşatacaktır.
@@ -59,7 +52,7 @@ Sosa isteğe göre susam yağı, oyster sos da eklenebilir ve farklı baharatlar
 Sos ağdalaşıncaya kadar çektirilerek pişirilir. Bonfileler istenilen pişme derecesine göre yüksek ateşte iki yüzü de pişirilir ve dilimlenir.
 Son aşamada ıspanaklar ve sos ve biberler ile birleştirilir. Ispanakların ölmemesine dikkat edilmelidir. Son bir kez daha ocakta sotelenir ve servis edilir. 
                 </p>
-                    <a href="#" class="btn">daha fazla</a>
+                <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/%C3%B6dev.html" class="btn">ana sayfaya dön</a>
             </div>
         </div>
     </section>
@@ -72,14 +65,13 @@ Son aşamada ıspanaklar ve sos ve biberler ile birleştirilir. Ispanakların ö
                 <img src="et3.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
-                <h3>dana döş </h3>
+                <h5>dana döş </h5>
                 <p>
             Bir tencerede üzüm sirkesi, domates, sarımsak, İçim Krem Peynir ve biberiyeyi, kısık ateşte sürekli karıştırarak pişirin. 
             2 bardak su ekleyerek pişirmeye devam edin. Eti tuz ve karabiberle tatlandırdıktan sonra sosun üzerine yerleştirin ve sosu kaşık yardımıyla alttan üste alarak etin üzerine gezdirin. 
             Yağlı kağıt ile üzerini kapatarak 200°C fırında yaklaşık 3 saat pişirin. 
             Pişen eti kesme tahtası üzerine alarak 5-6 dakika dinlendirin. Daha sonra dilimleyerek tabaklara alın, sosu üzerlerine gezdirin ve ince kıyılmış maydanoz ile servis yapın.
                 </p>
-                    <a href="#" class="btn">daha fazla</a>
             </div>
         </div>
     </section>
@@ -90,13 +82,12 @@ Son aşamada ıspanaklar ve sos ve biberler ile birleştirilir. Ispanakların ö
                 <img src="tavukızgara.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
-                <h3>ızgara kanat</h3>
+                <h5>ızgara kanat</h5>
                 <p>Kanatlar iyice yıkanır.
                     Marinesi için tüm malzeme derince bir kapta karıştırılır ve kanatlara yedirilir.
                     Vakit varsa, en az 2 saat üstü kapalı bir şekilde dolapta dinlendirilir. Hatta ne kadar çok dinlendirirseniz, sonuç o kadar mükemmel olacaktır.
                     Dinlenen kanatlar, ızgarada kontrollü olarak pişirilip servis edilir.
                 </p>
-                    <a href="#" class="btn">daha fazla</a>
             </div>
         </div>
     </section>
@@ -108,25 +99,18 @@ Son aşamada ıspanaklar ve sos ve biberler ile birleştirilir. Ispanakların ö
                 <img src="tavuk1.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
-                <h3>ızgara göğüs</h3>
+                <h5>ızgara göğüs</h5>
                 <p>
                     Tavuk göğüslerini fileto yaptıramadı iseniz enine ikiye kesip etleri döverek yumuşatın.
                     Bir kap içerisinde tuzlayıp, baharatlayıp zeytinyağında bir saat bekletin. Vaktiniz yok ise bekletmeyebilirsiniz.
                     Döküm tavayı ısıtın. Tavuk göğüs etlerini tavanızın büyüklüğüne göre yerleştirin.
                     3-4 dakika bir taraf kızardıktan sonra diğer tarafa döndürün. Bu şekilde tüm etleri bitirip yanında salata ile servis edin.
                 </p>
-                    <a href="#" class="btn">daha fazla</a>
             </div>
         </div>
     </section>
      <!--footer başlangıç-->
      <section class="footer">
-        <div class="search">
-            <input type="text"
-            class="search-input"
-            placeholder="search">
-            <button class="btn btn-primary">search</button>
-        </div>
         <div class="paylas">
             <a href="#" class="fab fa-facebook"></a>
             <a href="#" class="fab fa-twitter"></a>
