--- a/başvuru.html
+++ b/başvuru.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.6.3/css/all.min.css" 
     integrity="sha512-f2MWjotY+JCWDlE0+QAshlykvZUtIm35A6RHwfYZPdxKgLJpL8B+VVxjpHJwZDsZaWdyHVhlIHoblFYGkmrbhg==" 
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="script.js"></script>
 </head>
 <body>
     
@@ -43,7 +44,7 @@
             <input type="text" placeholder="adresiniz">
         </div>
        
-        <button type="submit">kayıt ol</button>
+        <button type="submit" onclick="kayit()">kayıt ol</button>
 </div>
 </body>
 </html>
